[package]
name = "fixedmod"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"

description = "Fast modular arithmetic with a fixed modulus"
license = "MIT OR Apache-2.0"
keywords = ["modular", "arithmetic", "barrett", "no_std"]
categories = ["algorithms", "no-std"]

exclude = ["/.vscode", "/note"]

[dependencies]

[dev-dependencies]
proptest = "1.11.0"
