[package]
name = "fixedmod"
version = "1.1.0-alpha3"
edition = "2021"
rust-version = "1.87.0"

description = "Fast modular arithmetic with a fixed modulus"
repository = "https://github.com/qdot3/fixedmod"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["modular", "arithmetic", "barrett", "no_std"]
categories = ["algorithms", "no-std"]

exclude = ["/.vscode"]

[dependencies]

[dev-dependencies]
proptest = "1.11.0"
